--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -1,4 +1,5 @@
-$screenWidth: 1600px;
+$screenWidth: 1140px;
+$margin: 32px;
 
 * {
     padding: 0;
@@ -6,7 +7,7 @@ $screenWidth: 1600px;
 }
 
 .container {
-    max-width: 1600px;
+    max-width: 1140px;
     margin: 0 auto;
     padding-left: 32px;
     padding-right: 32px;
@@ -47,16 +48,17 @@ $screenWidth: 1600px;
     box-sizing: border-box;
 
     .poster {
+        max-width: 1600px;
         display: flex;
         justify-content: space-between;
 
         &_left {
             width: 50%;
-            background-image: url(/prof-layout/images/poster_man.png);
-            background-position: left;
-            background-size: cover;
-            background-repeat: no-repeat;
-            height: 800px;
+
+            img {
+                margin-bottom: -5px;
+                width: 100%;
+            }
         }
 
         &_img {
@@ -91,12 +93,6 @@ $screenWidth: 1600px;
                 justify-content: space-between;
                 margin-bottom: 30px;
 
-                .card_text {
-                    width: 160px;
-                    align-self: center;
-                    text-align: center;
-                }
-
                 p {
                     font-family: 'Lato';
                     font-style: normal;
@@ -127,6 +123,7 @@ $screenWidth: 1600px;
                     margin-right: 30px;
                     display: flex;
                     justify-content: center;
+                    position: relative;
                 }
 
                 .card_small_kids {
@@ -144,7 +141,163 @@ $screenWidth: 1600px;
                 width: 100%;
                 background-image: url(/prof-layout/images/accesories.png);
             }
+
+            .card_text {
+                width: 100%;
+                height: 100%;
+                align-self: center;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                background: rgba(33, 22, 22, 0.7);
+            }
         }   
+    }
+
+    .fetured {
+        
+        .text {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .card_items {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            
+            .card {
+                width: $screenWidth / 3 - $margin * 2 / 3;
+                background: #F8F8F8;
+                margin: 30px 0 0;
+
+                &:nth-child(3n+2) {
+                    margin: 30px 30px 0;
+                }
+
+                img {
+                    height: 100%;
+                }
+
+                .img {
+                    background: #F7E4E2;
+                    display: flex;
+                    justify-content: center;
+                }
+            }
+        }
+    }
+
+    .button {
+        display: flex;
+        justify-content: center;
+        
+        .button_all-prod {
+            border: 1px solid #FF6A6A;
+            padding: 15px 38px;
+            background: #fff;
+            margin: 50px 0 0;
+        }
+    }
+}
+
+.bottom {
+    background: #222224;
+
+    .benefits {
+        display: flex;
+        justify-content: center;
+        padding-top: 100px;
+        padding-bottom: 104px;
+        margin-top: 95px;
+        flex-wrap: wrap;
+
+        .bf_card {
+            width: $screenWidth / 3 - $margin * 2 / 3;
+            height: 134px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+
+            &:nth-child(2) {
+                margin-left: 30px;
+                margin-right: 30px;
+            }
+        }
+    }
+
+    .subs-and-prom {
+        background-image: url(/prof-layout/images/bg_footer.png);
+        display: flex;
+        justify-content: center;
+        height: 450px;
+
+        .smoth {
+            display: flex;
+            width: 100%;
+            background: rgba(244, 244, 244, 0.7);
+        }
+
+        &_left {
+            width: 50%;
+            height: 100%;
+            flex-direction: column;
+            display: flex;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &_right {
+            width: 50%;
+            height: 100%;
+            flex-direction: column;
+            display: flex;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+
+            form {
+                display: flex;
+                margin-top: 32px;
+
+                input {
+                    width: 256px;
+                    height: 49px;
+                    border: none;
+                    border-radius: 50px 0 0 50px;
+                    background: #e1e1e1;
+                    padding: 7px 22px;
+                    box-sizing: border-box;
+                }
+    
+                .button_sub {
+                    display: flex;
+                    justify-content: center;
+                    width: 100px;
+                    height: 49px;
+                    border: none;
+                    border-radius: 0 50px 50px 0;
+                    background: #F16D7F;
+                    padding: 7px 7px 6px 8px;
+                    box-sizing: border-box;
+    
+                    font-family: 'Lato';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 17px;
+                    display: flex;
+                    align-items: center;
+                    color: #222224;
+                    opacity: 0.67;
+                    
+                }
+            }
+        }
     }
 }
 
@@ -169,6 +322,18 @@ $screenWidth: 1600px;
         line-height: 16px;
         color: #222222;
         text-transform: uppercase;
+        margin-top: 8px;
+    }
+
+    &_featured {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 36px;
+        color: #222222;
+        text-align: center;
+        margin-top: 96px;
     }
 }
 
@@ -184,10 +349,104 @@ $screenWidth: 1600px;
     &_cat {
         font-family: 'Lato';
         font-style: normal;
-        font-weight: 700;
+        font-weight: 300;
         font-size: 16px;
         line-height: 19px;
-        color: #222222;
+        color: #ffffff;
         text-transform: uppercase;
+    }
+
+    &_card {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 16px;
+        color: #000000;
+        margin: 25px 16px 0;
+    }
+
+    &_bf {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 24px;
+        color: #FBFBFB;
+        margin-top: 28px;
+    }
+
+    &_subs-and-prom {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 167.2%;
+        text-align: center;
+        color: #222224;
+    }
+}
+
+.text_h4 {
+
+    &_subs-and-prom {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 167.2%;
+        text-align: center;
+        color: #222224;
+    }
+}
+
+.text_p {
+
+    &_featured {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #9F9F9F;
+        text-align: center;
+        margin-top: 6px;
+        margin-bottom: 18px;
+    }
+
+    &_card {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 17px;
+        color: #5D5D5D;
+        margin: 12px 16px 0;
+    }
+
+    &_price {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: #F16D7F;
+        margin: 18px 18px 20px;
+    }
+
+    &_bf {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        color: #FBFBFB;
+        margin-top: 16px;
+    }
+
+    &_subs-and-prom {
+        width: 356px;
+        text-align: center;
     }
 }
