--- a/prof-layout/style.css
+++ b/prof-layout/style.css
@@ -21,7 +21,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 20px;
 }
 
@@ -231,7 +231,7 @@
 }
 
 .middle .fetured .card_items .card img {
-  height: 100%;
+  height: 420px;
 }
 
 .middle .fetured .card_items .card .img {
@@ -258,6 +258,10 @@
   padding: 15px 38px;
   background: #fff;
   margin: 50px 0 0;
+}
+
+.middle .button .button_all-prod:hover {
+  background: #FF6A6A;
 }
 
 .bottom {
@@ -309,7 +313,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 450px;
 }
 
 .bottom .subs-and-prom .smoth {
@@ -317,6 +320,8 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  padding-top: 97px;
+  padding-bottom: 126px;
   background: rgba(244, 244, 244, 0.7);
 }
 
@@ -338,6 +343,10 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.bottom .subs-and-prom_left img {
+  margin-bottom: 30px;
 }
 
 .bottom .subs-and-prom_right {
@@ -403,7 +412,56 @@
       -ms-flex-align: center;
           align-items: center;
   color: #222224;
-  opacity: 0.67;
+}
+
+.bottom .copy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.bottom .copy .copy_left {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.bottom .copy .copy_right {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.bottom .copy .copy_right .square {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 32px;
+  height: 32px;
+  background: #fff;
+  margin-left: 7px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .colortext {
@@ -543,10 +601,20 @@
   text-align: center;
   color: #FBFBFB;
   margin-top: 16px;
+  opacity: 0.7;
 }
 
 .text_p_subs-and-prom {
   width: 356px;
   text-align: center;
+}
+
+.text_p_copy {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FBFBFB;
 }
 /*# sourceMappingURL=style.css.map */
