--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -19,7 +19,7 @@ $margin: 32px;
     .menu {
         display: flex;
         justify-content: space-between;
-        padding-top: 30px;
+        padding-top: 20px;
         padding-bottom: 20px;
 
         &_left {
@@ -178,7 +178,7 @@ $margin: 32px;
                 }
 
                 img {
-                    height: 100%;
+                    height: 420px;
                 }
 
                 .img {
@@ -199,6 +199,10 @@ $margin: 32px;
             padding: 15px 38px;
             background: #fff;
             margin: 50px 0 0;
+
+            &:hover {
+                background: #FF6A6A;
+            }
         }
     }
 }
@@ -233,11 +237,12 @@ $margin: 32px;
         background-image: url(/prof-layout/images/bg_footer.png);
         display: flex;
         justify-content: center;
-        height: 450px;
 
         .smoth {
             display: flex;
             width: 100%;
+            padding-top: 97px;
+            padding-bottom: 126px;
             background: rgba(244, 244, 244, 0.7);
         }
 
@@ -249,6 +254,10 @@ $margin: 32px;
             align-content: center;
             align-items: center;
             justify-content: center;
+
+            img {
+                margin-bottom: 30px;
+            }
         }
 
         &_right {
@@ -293,9 +302,38 @@ $margin: 32px;
                     display: flex;
                     align-items: center;
                     color: #222224;
-                    opacity: 0.67;
                     
                 }
+            }
+        }
+    }
+
+    .copy {
+        display: flex;
+        padding-top: 24px;
+        padding-bottom: 24px;
+
+        .copy_left {
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .copy_right {
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .square {
+                display: flex;
+                width: 32px;
+                height: 32px;
+                background: #fff;
+                margin-left:7px;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
@@ -443,10 +481,20 @@ $margin: 32px;
         text-align: center;
         color: #FBFBFB;
         margin-top: 16px;
+        opacity: 0.7;
     }
 
     &_subs-and-prom {
         width: 356px;
         text-align: center;
+    }
+
+    &_copy {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: #FBFBFB;
     }
 }
