--- a/prof-layout/style.css
+++ b/prof-layout/style.css
@@ -155,7 +155,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: relative;
 }
 
 .middle .categories_items_small .card_small_kids {
@@ -230,10 +229,6 @@
   margin: 30px 30px 0;
 }
 
-.middle .fetured .card_items .card img {
-  height: 420px;
-}
-
 .middle .fetured .card_items .card .img {
   background: #F7E4E2;
   display: -webkit-box;
@@ -242,6 +237,55 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
+}
+
+.middle .fetured .card_items .card .img .hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: rgba(58, 56, 56, 0.86);
+  opacity: 0;
+}
+
+.middle .fetured .card_items .card .img .hover:hover {
+  opacity: 1;
+}
+
+.middle .fetured .card_items .card .img .hover .button_add-to-cart {
+  background: none;
+  border: 1px solid #ffffff;
+  height: 53px;
+  width: 148px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.middle .fetured .card_items .card .img .hover .cart_img {
+  height: 25px;
+}
+
+.middle .fetured .card_items .card .img img {
+  height: 420px;
 }
 
 .middle .button {
@@ -258,6 +302,7 @@
   padding: 15px 38px;
   background: #fff;
   margin: 50px 0 0;
+  cursor: pointer;
 }
 
 .middle .button .button_all-prod:hover {
@@ -402,6 +447,7 @@
   padding: 7px 7px 6px 8px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  cursor: pointer;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
@@ -462,6 +508,11 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
+}
+
+.bottom .copy .copy_right .square:hover {
+  background: #FF6A6A;
 }
 
 .colortext {
@@ -580,6 +631,16 @@
   line-height: 17px;
   color: #5D5D5D;
   margin: 12px 16px 0;
+}
+
+.text_p_add-to-cart {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFFFFF;
+  margin-left: 11px;
 }
 
 .text_p_price {
