--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -123,7 +123,6 @@ $margin: 32px;
                     margin-right: 30px;
                     display: flex;
                     justify-content: center;
-                    position: relative;
                 }
 
                 .card_small_kids {
@@ -177,15 +176,49 @@ $margin: 32px;
                     margin: 30px 30px 0;
                 }
 
-                img {
-                    height: 420px;
-                }
-
                 .img {
                     background: #F7E4E2;
                     display: flex;
                     justify-content: center;
+                    position: relative;
+
+                    .hover {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-content: center;
+                        align-items: center;
+                        justify-content: center;
+                        background: rgba(58, 56, 56, 0.86);
+                        opacity: 0;
+
+                        &:hover {
+                            opacity: 1;
+                        }
+
+                        .button_add-to-cart {
+                            background: none;
+                            border: 1px solid #ffffff;
+                            height: 53px;
+                            width: 148px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            cursor: pointer;
+                        }
+
+                        .cart_img {
+                            height: 25px;
+                        }
+                    }
+
+                    img {
+                        height: 420px;
+                    }
                 }
+
+                
             }
         }
     }
@@ -199,6 +232,7 @@ $margin: 32px;
             padding: 15px 38px;
             background: #fff;
             margin: 50px 0 0;
+            cursor: pointer;
 
             &:hover {
                 background: #FF6A6A;
@@ -293,6 +327,7 @@ $margin: 32px;
                     background: #F16D7F;
                     padding: 7px 7px 6px 8px;
                     box-sizing: border-box;
+                    cursor: pointer;
     
                     font-family: 'Lato';
                     font-style: normal;
@@ -334,6 +369,11 @@ $margin: 32px;
                 margin-left:7px;
                 align-items: center;
                 justify-content: center;
+                cursor: pointer;
+
+                &:hover {
+                    background: #FF6A6A;
+                }
             }
         }
     }
@@ -460,6 +500,16 @@ $margin: 32px;
         line-height: 17px;
         color: #5D5D5D;
         margin: 12px 16px 0;
+    }
+
+    &_add-to-cart {
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #FFFFFF;
+        margin-left: 11px;
     }
 
     &_price {
