--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -268,6 +268,8 @@ $margin: 32px;
     }
 
     .subs-and-prom {
+        max-width: 1600px;
+        margin: 0 auto;
         background-image: url(/prof-layout/images/bg_footer.png);
         display: flex;
         justify-content: center;
