--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -265,7 +265,7 @@ $margin: 32px;
             height: 134px;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: center;
 
             &:nth-child(2) {
