--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -29,6 +29,7 @@ $margin: 32px;
 
             &_item {
                 margin-right: 41px;
+                cursor: pointer;
             }
         }
 
@@ -38,6 +39,7 @@ $margin: 32px;
 
             &_item {
                 margin-left: 33px;
+                cursor: pointer;
             }
         }
     }
@@ -167,7 +169,7 @@ $margin: 32px;
             flex-wrap: wrap;
             
             .card {
-                width: $screenWidth / 3 - $margin * 2 / 3;
+                width: 360px;
                 background: #F8F8F8;
                 margin: 30px 0 0;
 
@@ -180,6 +182,8 @@ $margin: 32px;
                     display: flex;
                     justify-content: center;
                     position: relative;
+                    width: 360px;
+                    height: 420px;
 
                     .hover {
                         position: absolute;
@@ -218,10 +222,6 @@ $margin: 32px;
                         .cart_img {
                             height: 25px;
                         }
-                    }
-
-                    img {
-                        height: 420px;
                     }
                 }
 
@@ -607,6 +607,7 @@ $margin: 32px;
         padding-top: 48px;
         padding-bottom: 64px;
         margin-top: 65px;
+        align-items: center;
     }
 
     .bottom .benefits .bf_card:nth-child(2) {
