--- a/prof-layout/style.css
+++ b/prof-layout/style.css
@@ -32,6 +32,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  list-style-type: none;
 }
 
 .top .menu_left_item {
@@ -46,6 +47,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  list-style-type: none;
 }
 
 .top .menu_right_item {
@@ -131,7 +133,6 @@
 }
 
 .middle .categories_items_small .card_small_women {
-  width: 386.66667px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,7 +143,6 @@
 }
 
 .middle .categories_items_small .card_small_men {
-  width: 386.66667px;
   margin-left: 30px;
   margin-right: 30px;
   display: -webkit-box;
@@ -155,7 +155,6 @@
 }
 
 .middle .categories_items_small .card_small_kids {
-  width: 386.66667px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -229,6 +228,15 @@
   margin: 30px 30px 0;
 }
 
+.middle .fetured .card_items .card img {
+  width: 100%;
+}
+
+.middle .fetured .card_items .card .extra_img {
+  width: auto;
+  height: 100%;
+}
+
 .middle .fetured .card_items .card .img {
   background: #F7E4E2;
   display: -webkit-box;
@@ -286,11 +294,12 @@
   font-size: 14px;
   line-height: 17px;
   color: #FFFFFF;
-  margin-left: 11px;
 }
 
 .middle .fetured .card_items .card .img .hover .cart_img {
   height: 25px;
+  width: auto;
+  padding-right: 11px;
 }
 
 .middle .button {
@@ -333,7 +342,7 @@
 }
 
 .bottom .benefits .bf_card {
-  width: 365.33333px;
+  width: 360px;
   height: 134px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -775,6 +784,113 @@
         -ms-flex-pack: end;
             justify-content: flex-end;
     margin-right: 32px;
+  }
+}
+
+@media (max-width: 667px) {
+  .top .menu_right_item:nth-child(2n+1) {
+    display: none;
+  }
+  .top .menu {
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .top_bottom .poster_left {
+    width: 0%;
+  }
+  .top_bottom .poster_right {
+    width: 100%;
+    margin: 146px 40px;
+  }
+  .middle .categories_items_small {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .middle .categories_items_small .card_small_women {
+    width: none;
+  }
+  .middle .categories_items_small .card_small_men {
+    width: none;
+    margin: 32px 0;
+  }
+  .middle .categories_items_small .card_small_kids {
+    width: none;
+  }
+  .extra_img_cat {
+    height: 110px;
+  }
+  .middle .categories_items_small {
+    margin-bottom: 32px;
+  }
+  .middle .fetured .card_items .card .img {
+    width: 100%;
+  }
+  .middle .fetured .card_items .card:nth-child(1n+1) {
+    margin: 8px 0px;
+  }
+  .bottom .subs-and-prom .smoth {
+    padding-top: 64px;
+    padding-bottom: 100px;
+  }
+  .bottom .subs-and-prom_right {
+    width: auto;
+  }
+  .bottom .subs-and-prom_right form {
+    margin-top: 22px;
+  }
+  .bottom .subs-and-prom_left {
+    width: auto;
+  }
+  .bottom .copy {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .bottom .copy .copy_left {
+    -webkit-box-pack: normal;
+        -ms-flex-pack: normal;
+            justify-content: normal;
+    margin-left: 0px;
+    text-align: center;
+    width: auto;
+    margin-top: 40px;
+  }
+  .bottom .copy .copy_right {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-right: 0px;
+  }
+  .bottom .copy {
+    padding-top: 43px;
+    padding-bottom: 9px;
+  }
+  .text_p_subs-and-prom {
+    width: 90%;
+  }
+  .text_h4_subs-and-prom {
+    font-size: 14px;
+  }
+  .text_h3 {
+    font-size: 20px;
+    line-height: 20px;
+    text-transform: uppercase;
+  }
+  .text_h1 {
+    font-size: 38px;
+    line-height: 45px;
+    text-transform: uppercase;
   }
 }
 /*# sourceMappingURL=style.css.map */
