--- a/prof-layout/style.scss
+++ b/prof-layout/style.scss
@@ -25,7 +25,7 @@ $margin: 32px;
         &_left {
             display: flex;
             align-items: center;
-
+            list-style-type: none;
 
             &_item {
                 margin-right: 41px;
@@ -36,6 +36,7 @@ $margin: 32px;
         &_right {
             display: flex;
             align-items: center;
+            list-style-type: none;
 
             &_item {
                 margin-left: 33px;
@@ -107,7 +108,6 @@ $margin: 32px;
 
 
                 .card_small_women {
-                    width: $screenWidth / 3;
                     display: flex;
                     justify-content: center;
                     position: relative;
@@ -115,7 +115,6 @@ $margin: 32px;
                 }
 
                 .card_small_men {
-                    width: $screenWidth / 3;
                     margin-left: 30px;
                     margin-right: 30px;
                     display: flex;
@@ -124,7 +123,6 @@ $margin: 32px;
                 }
 
                 .card_small_kids {
-                    width: $screenWidth / 3;
                     display: flex;
                     justify-content: center;
                     position: relative;
@@ -177,6 +175,15 @@ $margin: 32px;
                     margin: 30px 30px 0;
                 }
 
+                img {
+                    width: 100%;
+                }
+
+                .extra_img {
+                    width: auto;
+                    height: 100%;
+                }
+
                 .img {
                     background: #F7E4E2;
                     display: flex;
@@ -216,11 +223,12 @@ $margin: 32px;
                             font-size: 14px;
                             line-height: 17px;
                             color: #FFFFFF;
-                            margin-left: 11px;
                         }
 
                         .cart_img {
                             height: 25px;
+                            width: auto;
+                            padding-right: 11px;
                         }
                     }
                 }
@@ -260,7 +268,7 @@ $margin: 32px;
         flex-wrap: wrap;
 
         .bf_card {
-            width: $screenWidth / 3 - $margin * 2 / 3;
+            width: 360px;
             height: 134px;
             display: flex;
             flex-direction: column;
@@ -646,5 +654,122 @@ $margin: 32px;
     .bottom .copy .copy_right {
         justify-content: flex-end;
         margin-right: 32px;
+    }
+}
+
+@media (max-width: 667px) {
+    .top .menu_right_item:nth-child(2n+1) {
+        display: none;
+    }
+
+    .top .menu {
+        padding-top: 18px;
+        padding-bottom: 18px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .top_bottom .poster_left {
+        width: 0%;
+    }
+
+    .top_bottom .poster_right {
+        width: 100%;
+        margin: 146px 40px;
+    }
+
+    .middle .categories_items_small {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .middle .categories_items_small .card_small_women {
+        width: none;
+    }
+
+    .middle .categories_items_small .card_small_men {
+        width: none;
+        margin: 32px 0;
+    }
+
+    .middle .categories_items_small .card_small_kids {
+        width: none;
+    }
+
+    .extra_img_cat {
+        height: 110px;
+    }
+
+    .middle .categories_items_small {
+        margin-bottom: 32px;
+    }
+
+    .middle .fetured .card_items .card .img {
+        width: 100%;
+    }
+
+    .middle .fetured .card_items .card:nth-child(1n+1) {
+        margin: 8px 0px;
+    }
+
+    .bottom .subs-and-prom .smoth {
+        padding-top: 64px;
+        padding-bottom: 100px;
+    }
+
+    .bottom .subs-and-prom_right {
+        width: auto;
+    }
+
+    .bottom .subs-and-prom_right form {
+        margin-top: 22px;
+    }
+
+    .bottom .subs-and-prom_left {
+        width: auto;
+    }
+
+    .bottom .copy {
+        flex-direction: column-reverse ;
+        align-items: center;
+    }
+
+    .bottom .copy .copy_left {
+        justify-content: normal;
+        margin-left: 0px;
+        text-align: center;
+        width: auto;
+        margin-top: 40px;
+    }
+
+    .bottom .copy .copy_right {
+        justify-content: center;
+        margin-right: 0px;
+    }
+
+    .bottom .copy {
+        padding-top: 43px;
+        padding-bottom: 9px;
+
+    }
+
+    .text_p_subs-and-prom {
+        width: 90%;
+    }
+
+    .text_h4_subs-and-prom {
+        font-size: 14px;
+    }
+
+    .text_h3 {
+        font-size: 20px;
+        line-height: 20px;
+        text-transform: uppercase;
+    }
+
+    .text_h1 {
+        font-size: 38px;
+        line-height: 45px;
+        text-transform: uppercase;
     }
 }
