--- a/site-portfolio/style.css
+++ b/site-portfolio/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: sans-serif, "Lato";
 }
 
 .container {
@@ -11,10 +12,6 @@
   margin: 0 auto;
   padding-left: 32px;
   padding-right: 32px;
-}
-
-.header {
-  border: 1px solid black;
 }
 
 .header .menu {
@@ -45,11 +42,13 @@
 }
 
 .header .menu_item {
-  margin: 0 16px;
-}
-
-.CV {
-  border: 1px solid black;
+  height: 35px;
+  width: 80px;
+  border-radius: 7px;
+  margin: 0 8px;
+  padding: 8px;
+  background: #eee;
+  text-align: center;
 }
 
 .CV_head {
@@ -60,10 +59,6 @@
 
 .CV .article {
   margin-left: 16px;
-}
-
-.content {
-  border: 1px solid black;
 }
 
 .content .roadMap {
@@ -175,8 +170,13 @@
   height: 200px;
 }
 
-h1, h2 {
+h1, h2, h3 {
   margin: 16px 0px 8px;
+}
+
+.text_h3_roadMap {
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .p_CV {
