--- a/site-portfolio/style.scss
+++ b/site-portfolio/style.scss
@@ -53,7 +53,10 @@ $circle_d: 30px;
 }
 
 .CV {
-    
+    margin: 20px 0;
+    box-shadow: 0px 0px 20px 10px #eee;
+    border-radius: 20px;
+    padding: 10px;
 
     &_head {
         display: flex;
@@ -70,6 +73,10 @@ $circle_d: 30px;
     .roadMap {
         width: 100%;
         height: 100%;
+        margin: 20px 0;
+        box-shadow: 0px 0px 20px 10px #eee;
+        border-radius: 20px;
+        padding: 10px;
 
         &_item {
             height: $checkPoint_itemHeight;
@@ -150,11 +157,19 @@ $circle_d: 30px;
     .projects {
         
         .project_item1 {
+            margin: 20px 0;
+            box-shadow: 0px 0px 20px 10px #eee;
+            border-radius: 20px;
+            padding: 10px;
             display: flex;
             justify-content: space-between;
         }
 
         .project_item2 {
+            margin: 20px 0;
+            box-shadow: 0px 0px 20px 10px #eee;
+            border-radius: 20px;
+            padding: 10px;
             display: flex;
             flex-direction: row-reverse;
             justify-content: space-between;
@@ -189,5 +204,14 @@ h1, h2, h3 {
 
     &_roadMap {
 
+    }
+}
+
+a {
+    text-decoration: none;
+    color: none;
+
+    &:visited {
+        color: inherit;
     }
 }
