--- a/site-portfolio/style.css
+++ b/site-portfolio/style.css
@@ -208,10 +208,14 @@ h1, h2, h3 {
 
 a {
   text-decoration: none;
-  color: none;
 }
 
 a:visited {
   color: inherit;
+}
+
+img {
+  border: 1px solid #eee;
+  border-radius: 20px;
 }
 /*# sourceMappingURL=style.css.map */
